generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Tenant {
  id        String       @id @default(cuid())
  name      String
  status    TenantStatus @default(ACTIVE)
  planId    String?
  createdAt DateTime     @default(now())
  updatedAt DateTime     @updatedAt

  plan        Plan?                 @relation(fields: [planId], references: [id])
  apiKeys     ApiKey[]
  usageEvents UsageEvent[]
  aggregates  UsageDailyAggregate[]
  invoices    Invoice[]
}

model Plan {
  id               String   @id @default(cuid())
  name             String   @unique
  billingCurrency  BillingCurrency @default(USD)
  monthlyBaseFee   Int
  includedUnits    Int
  dailyUnitLimit   Int
  overageUnitPrice Int
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  tenants Tenant[]
}

model ApiKey {
  id        String       @id @default(cuid())
  tenantId  String
  keyHash   String       @unique
  keyPrefix String
  name      String
  status    ApiKeyStatus @default(ACTIVE)
  createdAt DateTime     @default(now())
  revokedAt DateTime?

  tenant      Tenant       @relation(fields: [tenantId], references: [id])
  usageEvents UsageEvent[]
}

model UsageEvent {
  id         String   @id @default(cuid())
  tenantId   String
  apiKeyId   String
  requestId  String
  endpoint   String
  method     String
  statusCode Int
  costUnits  Int
  occurredAt DateTime @default(now())

  tenant Tenant @relation(fields: [tenantId], references: [id])
  apiKey ApiKey @relation(fields: [apiKeyId], references: [id])

  @@unique([tenantId, requestId])
  @@index([tenantId, occurredAt])
}

model UsageDailyAggregate {
  id             String   @id @default(cuid())
  tenantId       String
  date           DateTime
  totalRequests  Int      @default(0)
  totalCostUnits Int      @default(0)
  updatedAt      DateTime @updatedAt

  tenant Tenant @relation(fields: [tenantId], references: [id])

  @@unique([tenantId, date])
}

model Invoice {
  id            String        @id @default(cuid())
  tenantId      String
  billingPeriod String
  billingCurrency BillingCurrency @default(USD)
  baseFee       Int
  includedUnits Int
  usedUnits     Int
  overageUnits  Int
  totalAmount   Int
  status        InvoiceStatus @default(DRAFT)
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt

  tenant    Tenant            @relation(fields: [tenantId], references: [id])
  lineItems InvoiceLineItem[]

  @@unique([tenantId, billingPeriod])
}

model InvoiceLineItem {
  id          String @id @default(cuid())
  invoiceId   String
  description String
  amount      Int
  quantity    Int
  unitPrice   Int

  invoice Invoice @relation(fields: [invoiceId], references: [id])
}

model User {
  id           String     @id @default(cuid())
  email        String     @unique
  name         String
  passwordHash String
  role         UserRole   @default(OPERATOR)
  status       UserStatus @default(ACTIVE)
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt

  sessions Session[]
  auditLogs AuditLog[]
}

model Session {
  id        String   @id @default(cuid())
  userId    String
  tokenHash String   @unique
  expiresAt DateTime
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id])

  @@index([userId])
  @@index([expiresAt])
}

model SystemSetting {
  key       String   @id
  value     String
  updatedAt DateTime @updatedAt
}

model AuditLog {
  id        String   @id @default(cuid())
  userId    String?
  action    String
  resource  String
  resourceId String?
  metadata  Json?
  createdAt DateTime @default(now())

  user User? @relation(fields: [userId], references: [id])

  @@index([userId, createdAt])
  @@index([resource, createdAt])
}

enum TenantStatus {
  ACTIVE
  SUSPENDED
}

enum ApiKeyStatus {
  ACTIVE
  REVOKED
}

enum InvoiceStatus {
  DRAFT
  ISSUED
  PAID
  VOID
}

enum BillingCurrency {
  USD
  CNY
}

enum UserRole {
  ADMIN
  OPERATOR
  VIEWER
}

enum UserStatus {
  ACTIVE
  DISABLED
}
